# synth-force

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
scripts/: reset_repo.py
src/synth_force/: main.py  model_config.py  state.py
src/synth_force/crews/: __init__.py
src/synth_force/crews/analysis_crew/: __init__.py  analysis_crew.py
src/synth_force/crews/analysis_crew/config/: agents.yaml  tasks.yaml
src/synth_force/crews/devops_crew/: __init__.py  devops_crew.py
src/synth_force/crews/devops_crew/config/: agents.yaml  tasks.yaml
src/synth_force/crews/engineering_crew/: __init__.py  engineering_crew.py
src/synth_force/crews/engineering_crew/config/: agents.yaml  tasks.yaml
src/synth_force/crews/qa_crew/: __init__.py  qa_crew.py
src/synth_force/crews/qa_crew/config/: agents.yaml  tasks.yaml
src/synth_force/tools/: __init__.py  browser_mcp_tool.py  github_tools.py  k8s_tools.py
