[project]
name = "synth_force"
version = "0.1.0"
description = "synth-force using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.10.1",
    "PyGithub>=2.0",
]

[project.scripts]
synth_force = "synth_force.main:run"
run_crew = "synth_force.main:run"
train = "synth_force.main:train"
replay = "synth_force.main:replay"
test = "synth_force.main:test"
run_with_trigger = "synth_force.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
